--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 torch>=2.0.0
-transformers>=4.35.0
-datasets>=2.14.0
+transformers>=4.30.0
+datasets>=2.12.0
 pillow>=9.0.0
-requests>=2.28.0
+numpy>=1.24.0
+requests>=2.31.0
 tqdm>=4.65.0
-accelerate>=0.20.0
-sentencepiece>=0.1.99
-torchvision>=0.15.0 
+scikit-learn>=1.2.0
+accelerate>=0.20.0 
